--- a/src/components/navbar/pages/signUp/SignUpPage.css
+++ b/src/components/navbar/pages/signUp/SignUpPage.css
@@ -28,3 +28,21 @@ button {
 button:hover {
   background-color: #0056b3;
 }
+
+
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.loading-button {
+  animation: pulse 1s infinite alternate; /* Apply the loading animation */
+}
